# SwiftLyrics_Analytics

./: LICENSE  README.md  pyproject.toml  setup.py  swift_code.ipynb
.ipynb_checkpoints/: swift_code-checkpoint.ipynb
SwiftLyrics_Analytics/: SwiftLyrics_Analytics.py  __main__.py  dataset.py  format.py  nn_analysis.py  wc.py
SwiftLyrics_Analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SwiftLyrics_Analytics/dataset/: albums.csv  lyrics.csv
SwiftLyrics_Analytics/test/: test_negative.py
dataset/: Corpus-of-Taylor-Swift-v1.4-lyrics.csv  Corpus-of-Taylor-Swift-v1.4.csv  albums.csv
